[package]
authors = ["dnaq", "The Exonum Team <exonum@bitfury.com>"]
description = "Fast cryptographic library for Rust (bindings to libsodium)"
documentation = "https://dnaq.github.io/sodiumoxide"
keywords = ["crypto", "NaCl", "libsodium"]
license = "MIT OR Apache-2.0"
name = "exonum_sodiumoxide"
readme = "README.md"
repository = "https://github.com/exonum/exonum_sodiumoxide"
version = "0.0.20"

[badges]
appveyor = { repository = "exonum/exonum_sodiumoxide" }
travis-ci = { repository = "exonum/exonum_sodiumoxide" }

[dependencies]
libc = "0.2.42"
exonum_libsodium-sys = { version = "0.0.20", path = "libsodium-sys" }
serde = { version="1.0.66", optional = true }

[dev-dependencies]
serde = "1"
serde_json = "1.0.21"
rustc-serialize = "0.3.24"
rmp-serde = "0.13.7"

[features]
std = []
default = ["serde", "std"]
