[package]
authors = ["dnaq", "The Exonum Team <exonum@bitfury.com>"]
build = "build.rs"
description = "FFI binding to libsodium"
documentation = "https://dnaq.github.io/sodiumoxide"
keywords = ["libsodium", "NaCl", "crypto"]
license = "MIT OR Apache-2.0"
links = "sodium"
name = "exonum_libsodium-sys"
repository = "https://github.com/exonum/exonum_sodiumoxide.git"
version = "0.0.24"
edition = "2018"

[build-dependencies]
pkg-config = "0.3"
flate2 = "1"
libc = "0.2"
tar = "0.4"
num_cpus = "1"
cc = { version = "1", features = ["parallel"] }

[target.'cfg(all(windows, target_env = "msvc"))'.build-dependencies]
zip = { version = "0.5", default-features = false, features = [ "deflate" ] }

[dependencies]
libc = "0.2"

[lib]
name = "libsodium_sys"
path = "lib.rs"
